--- a/menu.html
+++ b/menu.html
@@ -28,6 +28,17 @@
 </head>
 
 <body class="bgCommon">
+  <!-- WORK IN PROGRESS - WORK IN PROGRESS - WORK IN PROGRESS - WORK IN PROGRESS
+  <div class="behind container col-lg-12 col-12">
+    <div class="row">
+      <div class="coolBG" style="background-image: url(assets/img/Backgrounds/alex-knight.jpg);"></div>
+      <div class="coolBG" style="background-image: url(assets/img/photoGallery/joshua-hoehne.jpg);"></div>
+      <div class="coolBG" style="background-image: url(assets/img/photoGallery/juan-encalada.jpg);"></div>
+      <div class="coolBG" style="background-image: url(assets/img/photoGallery/filippo-faruffini.jpg);"></div>
+      <div class="coolBG" style="background-image: url(assets/img/photoGallery/chi-pham.jpg);" ></div>
+    </div>
+  </div>
+-->
 
   <!-- NAVIGATION BAR -->
   <div class="container-fluid transbox2 fixed-top ">
@@ -72,7 +83,7 @@
           <div class="card-body">
             <h5 class="card-title ubuntuM">Menu A</h5>
             <p class="card-text ubuntuL">Un menu comprenant uniquement des produits venus de la mer. Absolument tous les ingrédients de ce menu viennent de milieux aquatiques!<span><i class="fas fa-fish">
-            </i></span><span><i class="fas fa-fish"></i></span><span><i class="fas fa-fish"></i></span></p>
+                </i></span><span><i class="fas fa-fish"></i></span><span><i class="fas fa-fish"></i></span></p>
             <p class="card-text bottomOfDiv"><small class="text-muted">Image Credit: Maddi Bazzocco</small></p>
           </div>
         </div>
@@ -106,33 +117,33 @@
 
   <!-- Les entrées -->
   <div class="container my-5 transbox3 rounded">
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Entrées</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expandeded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Entrées</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#entreeToggler" aria-controls="entreeToggler" aria-expandeded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bone"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="entreeToggler">
+      <div class="collapse gold navbar-collapse" id="entreeToggler">
         <div class="container my-5">
-          <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
+          <div class="row p-3 mb-2 mx-3 transbox rounded ">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -145,31 +156,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Plats</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="gold big-font">Plats</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#platsToggler" aria-controls="platsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bacon"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="platsToggler">
+      <div class="collapse gold navbar-collapse" id="platsToggler">
         <div class="container my-5">
-          <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
+          <div class="row p-3 mb-2 mx-3  transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -182,31 +193,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Boîtes Bento</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Boîtes Bento</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#bentoToggler" aria-controls="bentoToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-box"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="bentoToggler">
+      <div class="collapse gold navbar-collapse" id="bentoToggler">
         <div class="container my-5">
           <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -219,31 +230,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Sushi</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Sushi</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#sushiToggler" aria-controls="sushiToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-bullseye"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="sushiToggler">
+      <div class="collapse gold navbar-collapse" id="sushiToggler">
         <div class="container my-5">
           <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -256,31 +267,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Desserts</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Desserts</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#dessertsToggler" aria-controls="dessertsToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-ice-cream"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="dessertsToggler">
+      <div class="collapse gold navbar-collapse" id="dessertsToggler">
         <div class="container my-5">
           <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge   ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -293,31 +304,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Boissons non-alcoolisées</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Softs</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#drinksToggler" aria-controls="drinksToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-mug-hot"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="drinksToggler">
+      <div class="collapse gold navbar-collapse" id="drinksToggler">
         <div class="container my-5">
           <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -330,31 +341,31 @@
   <div class="container my-5 transbox3 rounded">
     <nav class="navbar navbar-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html">
-        <span class="big-font">Alcools & Spiritueux</span></a>
-      <button class="navbar-toggler px-5 py-3" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expanded="true" aria-label="Toggle navigation">
+        <span class="big-font gold">Spiritueux</span></a>
+      <button class="navbar-toggler px-3 py-3 border-warning" type="button" data-toggle="collapse" data-target="#alcoholToggler" aria-controls="alcoholToggler" aria-expanded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-wine-glass-alt"></i>
         </span>
       </button>
-      <div class="collapse navbar-collapse" id="alcoholToggler">
+      <div class="collapse gold navbar-collapse" id="alcoholToggler">
         <div class="container my-5">
           <div class="row p-3 mb-2 mx-3 transbox rounded text-warning">
             <ul class="list-group col-lg-12">
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Cras justo odio
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge   ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Dapibus ac facilisis in
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge   ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge   ubuntuM badge-pill">300¥</span>
               </li>
               <li class="list-group-item ubuntuM bg-dark d-flex justify-content-between align-items-center">
                 Morbi leo risus
-                <span class="badge badge-primary ubuntuM badge-pill">300¥</span>
+                <span class="badge   ubuntuM badge-pill">300¥</span>
               </li>
             </ul>
           </div>
@@ -362,6 +373,8 @@
       </div>
     </nav>
   </div>
+
+
   <!-- END -->
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
