--- a/photos.html
+++ b/photos.html
@@ -67,26 +67,26 @@
       <!-- FIRST ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\artur-rutkowski.jpg">
-            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\artur-rutkowski.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\artur-rutkowski.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\photoGallery\artur-rutkowski.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Nouilles fraîches."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Artur Rutkowski</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\chi-pham.jpg">
-            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\chi-pham.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\chi-pham.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\photoGallery\chi-pham.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Soupe délicate."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Chi Pham</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\jennifer-schmidt.jpg">
-            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\jennifer-schmidt.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\jennifer-schmidt.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\photoGallery\jennifer-schmidt.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Tanburi."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Jennifer Schmidt</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\filippo-faruffini.jpg">
-            <img class="img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\filippo-faruffini.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\filippo-faruffini.jpg">
+            <img class="img-fluid rounded img-thumbnail" src="assets\img\photoGallery\filippo-faruffini.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Super sushi!"</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Filippo Faruffini</figcaption>
         </div>
@@ -94,26 +94,26 @@
       <!-- SECOND ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\dominik-vanyi.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\dominik-vanyi.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\dominik-vanyi.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\dominik-vanyi.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Notre porte d'entrée."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Dominik Vanyi</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\jj-ying.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\jj-ying.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\jj-ying.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\jj-ying.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Rue d'un de nos restaurants."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: J.J. Ying</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\joshua-hoehne.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\joshua-hoehne.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\joshua-hoehne.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\joshua-hoehne.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Spring Rolls!"</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Joshua Hoehne</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\juan-encalada.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\juan-encalada.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\juan-encalada.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\juan-encalada.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Gourmet food."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Juan Encalada</figcaption>
         </div>
@@ -121,20 +121,20 @@
       <!-- THIRD ROW -->
       <div class="row">
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\liam-macleod.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\liam-macleod.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\liam-macleod.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\liam-macleod.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Un des marchés pour nos ingrédients."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Liam McLeod</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\wai-austin.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\wai-austin.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\wai-austin.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\wai-austin.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"La rue pour un autre de nos restaurants."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: Wai Austin</figcaption>
         </div>
         <div class="col-md-6 col-lg-3 col-12 my-5">
-          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\Photo Gallery\yuxiang-zhang.jpg">
-            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\Photo Gallery\yuxiang-zhang.jpg" alt=""></a>
+          <a data-toggle="lightbox" data-gallery="img-gallery" href="assets\img\photoGallery\yuxiang-zhang.jpg">
+            <img class="smallImg img-fluid rounded img-thumbnail" src="assets\img\photoGallery\yuxiang-zhang.jpg" alt=""></a>
           <figcaption class="text-white text-center figure-caption">"Gyoza madness."</figcaption>
           <figcaption class="text-white text-center figure-caption">Image Credit: YuXiang Zhang</figcaption>
         </div>
