--- a/restaurants.html
+++ b/restaurants.html
@@ -22,9 +22,9 @@
   <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
   <link rel="manifest" href="assets/img/favicon/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileColor" content="#fa06da">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#fa06da">
 </head>
 
 <body class="bgCommon">
@@ -62,52 +62,56 @@
   <!-- MY RESTAURANTS -->
 
   <!-- JoJo's -->
-  <div class="col-12 col-md-12 col-lg-6 my-5 mx-auto">
-    <div class="card text-white bg-dark mb-3">
-      <div class="map-responsive rounded">
-        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Cantersteen%2010%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no"
-          marginheight="0" marginwidth="0"></iframe>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title ubuntuM">JoJo's Bizarre Cuisine</h5>
-        <p class="card-text ubuntuL">Cantersteen 10, 1000 Bruxelles</p>
-        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-        <p class="ef"></p>
+  <div class="container my-5 p-1 w-75 transbox rounded">
+    <div class=" col-12 col-md-12 col-lg-10 my-5 mx-auto">
+      <div class="card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Cantersteen%2010%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no"
+            marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">JoJo's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Cantersteen 10, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+            <!-- OPEN - NOT OPEN JAVASCRIPT EVENT LISTENER-->
+          <p></p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Kakyoin's -->
-  <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
-    <div class=" h-100 card text-white bg-dark mb-3">
-      <div class="map-responsive rounded">
-        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20du%20Pont%20de%20la%20Carpe%207%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed"
-          frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title ubuntuM">Kakyoin's Bizarre Cuisine</h5>
-        <p class="card-text ubuntuL">Rue du Pont de la Carpe 7, 1000 Bruxelles</p>
-        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-        <p class="ef"></p>
+    <!-- Kakyoin's -->
+    <div class=" col-12 col-md-12 col-lg-10 my-5 mb-5 mx-auto">
+      <div class=" h-100 card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20du%20Pont%20de%20la%20Carpe%207%2C%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed"
+            frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">Kakyoin's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Rue du Pont de la Carpe 7, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+            <!-- OPEN - NOT OPEN JAVASCRIPT EVENT LISTENER-->
+          <p></p>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Avdol's -->
-  <div class="col-12 col-md-12 col-lg-6 mb-5 mx-auto">
-    <div class=" h-100 card text-white bg-dark mb-3">
-      <div class="map-responsive rounded">
-        <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20Jules%20Van%20Praet%2013%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0"
-          scrolling="no" marginheight="0" marginwidth="0"></iframe>
-      </div>
-      <div class="card-body">
-        <h5 class="card-title ubuntuM">Avdol's Bizarre Cuisine</h5>
-        <p class="card-text ubuntuL">Rue Jules Van Praet 13, 1000 Bruxelles</p>
-        <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
-        <p class="ef"></p>
+    <!-- Avdol's -->
+    <div class="col-12 col-md-12 col-lg-10 my-5 mb-5 mx-auto">
+      <div class=" h-100 card text-white bg-dark mb-3">
+        <div class="map-responsive rounded">
+          <iframe src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Rue%20Jules%20Van%20Praet%2013%201000%20Bruxelles+(JoJo's%20bizzare%20kitchen)&amp;ie=UTF8&amp;t=&amp;z=19&amp;iwloc=B&amp;output=embed" frameborder="0"
+            scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        </div>
+        <div class="card-body">
+          <h5 class="card-title ubuntuM">Avdol's Bizarre Cuisine</h5>
+          <p class="card-text ubuntuL">Rue Jules Van Praet 13, 1000 Bruxelles</p>
+          <p class="card-text ubuntuL">Ouvert du Lundi au Vendredi, de 10h à 17h.</p>
+            <!-- OPEN - NOT OPEN JAVASCRIPT EVENT LISTENER-->
+          <p></p>
+        </div>
       </div>
     </div>
-  </div>
   </div>
   <!-- END -->
 
