--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 <body class="bg">
 
   <!-- NAVIGATION BAR -->
-  <div class="container-fluid transbox2 fixed-top">
+  <div class="container-fluid transbox2 fixed-top ">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <a class="alex navbar-brand text-warning font-weight-bold" href="index.html"><img src="assets/img/indexPics/jotaro.png" width="30" height="35" class="d-inline-block align-top" alt=""><span class="big-font">JoJo's Bizarre Cuisine</span></a>
-      <button class="navbar-toggler col-5 mx-auto" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="true" aria-label="Toggle navigation">
+      <button class="navbar-toggler col-5 mx-auto py-3" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expandeded="true" aria-label="Toggle navigation">
         <span>
           <i class="fas fa-sitemap"></i>
         </span>
@@ -60,7 +60,7 @@
     </nav>
   </div>
 
-  <!-- OPEN - NOT OPEN JAVASCRIPT EVENT LISTENER-->
+<!-- CLIENT NAME EVENT LISTENER -->
   <div class="my-4 container-fluid text-center transbox">
     <h4 class="ubuntuB text-white h1-responsive text-center">Bienvenue, <span id="promptname"></span> !</h4>
   </div>
